Upadte base product + frontend