@@ -1,96 +1,131 @@
 package com.example.backend.category.service;
 
-import java.util.UUID;
-import java.util.stream.Collectors;
-
-import com.example.backend.category.entity.Category;
 import com.example.backend.category.CategoryRepository;
 import com.example.backend.category.dto.CategoryRequest;
 import com.example.backend.category.dto.CategoryResponse;
+import com.example.backend.category.entity.Category;
+import com.example.backend.category.exception.CategoryInUseException;
+import com.example.backend.category.exception.CategoryNotFoundException;
+import com.example.backend.category.exception.InvalidCategoryParentException;
+import com.example.backend.product.ProductRepository;
+import org.hibernate.exception.ConstraintViolationException;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
+import java.util.UUID;
 
 @Service
+@Transactional(readOnly = true)
 public class CategoryServiceImpl implements CategoryService {
-    private final CategoryRepository categoryRepository;
 
-    public CategoryServiceImpl(CategoryRepository categoryRepository) {
+    private final CategoryRepository categoryRepository;
+    private final ProductRepository productRepository;
+
+    public CategoryServiceImpl(CategoryRepository categoryRepository, ProductRepository productRepository) {
         this.categoryRepository = categoryRepository;
+        this.productRepository = productRepository;
     }
 
     @Override
+    @Transactional
     public CategoryResponse createCategory(CategoryRequest request) {
         Category category = new Category();
-        category.setCategoryName(request.categoryName());
-        category.setDescription(request.description());
-        
-        if (request.status() != null && !request.status().isEmpty()) {
-            category.setStatus(request.status());
-        }
-        if (request.parentId() != null) {
-            Category parent = categoryRepository.findById(request.parentId())
-                    .orElseThrow(() -> new RuntimeException("Không tìm thấy danh mục cha"));
-            category.setParent(parent);
-        }
-
-        Category saved = categoryRepository.save(category);
-        return mapToResponse(saved);
+        applyRequest(category, request);
+        return mapToResponse(saveCategory(category));
     }
 
     @Override
     public List<CategoryResponse> getAllCategories() {
-        return categoryRepository.findAll().stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList()); 
+        return categoryRepository.findAll().stream().map(this::mapToResponse).toList();
     }
-    //Xem chi tiết danh mục theo ID
+
     @Override
     public CategoryResponse getCategoryById(UUID id) {
-        Category category = categoryRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Không tìm thấy danh mục này!"));
-        return mapToResponse(category);
+        return mapToResponse(findCategoryById(id));
     }
 
-    //cập nhật danh mục
     @Override
+    @Transactional
     public CategoryResponse updateCategory(UUID id, CategoryRequest request) {
-        Category existingCategory = categoryRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Không tìm thấy danh mục để sửa!"));
-
-        existingCategory.setCategoryName(request.categoryName());
-        existingCategory.setDescription(request.description());
-
-        if (request.status() != null && !request.status().isEmpty()) {
-            existingCategory.setStatus(request.status());
-        }
-        if (request.parentId() != null) {
-            Category parent = categoryRepository.findById(request.parentId())
-                    .orElseThrow(() -> new RuntimeException("Không tìm thấy danh mục cha!"));
-            existingCategory.setParent(parent);
-        } else {
-            existingCategory.setParent(null); // Nếu khách muốn gỡ danh mục cha
-        }
-
-        Category updated = categoryRepository.save(existingCategory);
-        return mapToResponse(updated);
+        Category category = findCategoryById(id);
+        applyRequest(category, request);
+        return mapToResponse(saveCategory(category));
     }
 
-    //Xóa danh mục
     @Override
+    @Transactional
     public void deleteCategory(UUID id) {
-        Category existingCategory = categoryRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Không tìm thấy danh mục để xóa!"));
-        
-        categoryRepository.delete(existingCategory);
+        Category category = findCategoryById(id);
+        if (productRepository.existsByCategory_CategoryId(id)) {
+            throw new CategoryInUseException("Không thể xóa danh mục đang được sản phẩm tham chiếu: " + id);
+        }
+        if (categoryRepository.existsByParent_CategoryId(id)) {
+            throw new CategoryInUseException("Không thể xóa danh mục đang có danh mục con: " + id);
+        }
+        try {
+            categoryRepository.delete(category);
+            // Catch FK RESTRICT failures here, including references created after the checks.
+            categoryRepository.flush();
+        } catch (DataIntegrityViolationException exception) {
+            throw new CategoryInUseException(
+                    "Không thể xóa danh mục đang được dữ liệu khác tham chiếu: " + id, exception
+            );
+        }
     }
+
+    private Category saveCategory(Category category) {
+        try {
+            return categoryRepository.saveAndFlush(category);
+        } catch (DataIntegrityViolationException exception) {
+            for (Throwable cause = exception; cause != null; cause = cause.getCause()) {
+                if (cause instanceof ConstraintViolationException constraint
+                        && "fk_categories_parent".equals(constraint.getConstraintName())) {
+                    throw new CategoryNotFoundException("Danh mục cha được tham chiếu không còn tồn tại");
+                }
+            }
+            throw exception;
+        }
+    }
+
+    private Category findCategoryById(UUID id) {
+        return categoryRepository.findById(id).orElseThrow(() -> new CategoryNotFoundException(
+                "Không tìm thấy danh mục với ID: " + id
+        ));
+    }
+
+    private void applyRequest(Category category, CategoryRequest request) {
+        Category parent = request.parentId() == null ? null : findCategoryById(request.parentId());
+        validateParent(category, parent);
+        category.setCategoryName(request.categoryName().trim());
+        category.setDescription(request.description());
+        // A null parentId on PUT removes the parent; status remains optional.
+        category.setParent(parent);
+        if (request.status() != null) {
+            category.setStatus(request.status());
+        }
+    }
+
+    private void validateParent(Category category, Category parent) {
+        Set<UUID> visited = new HashSet<>();
+        for (Category ancestor = parent; ancestor != null; ancestor = ancestor.getParent()) {
+            UUID ancestorId = ancestor.getCategoryId();
+            if (ancestorId.equals(category.getCategoryId()) || !visited.add(ancestorId)) {
+                throw new InvalidCategoryParentException(
+                        "Danh mục không thể làm cha của chính nó hoặc tạo chu trình cha/con"
+                );
+            }
+        }
+    }
+
     private CategoryResponse mapToResponse(Category category) {
-        UUID parentId = (category.getParent() != null) ? category.getParent().getCategoryId() : null;
+        UUID parentId = category.getParent() == null ? null : category.getParent().getCategoryId();
         return new CategoryResponse(
-                category.getCategoryId(),
-                category.getCategoryName(),
-                category.getDescription(),
-                parentId,
-                category.getStatus()
+                category.getCategoryId(), category.getCategoryName(), category.getDescription(),
+                parentId, category.getStatus()
         );
     }
 }
